# snow

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
shells/snow/: default.nix
snow-helper/: Cargo.toml
snow-helper/src/: main.rs
src/: lib.rs  main.rs  search.rs
src/profile/: install.rs  list.rs  mod.rs  remove.rs  run.rs  update.rs
src/system/: install.rs  list.rs  mod.rs  rebuild.rs  remove.rs  update.rs
