[package]
name = "nix-snow"
version = "0.0.2"
edition = "2021"
default-run = "snow"

[[bin]]
name = "snow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix-data = { git = "https://github.com/snowflakelinux/nix-data", branch = "main" }
owo-colors = { version = "3.5", features = ["supports-colors"] }
lazy_static = "1.4"
ijson = "0.1"
nix-editor = "0.3.0-beta.1"
pretty_env_logger = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }

[workspace]
members = [".", "snow-helper"]
default-members = [".", "snow-helper"]