[package]
name = "nix-snow"
version = "0.2.0"
edition = "2024"
default-run = "snow"

[[bin]]
name = "snow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
owo-colors = { version = "4.2", features = ["supports-colors"] }
lazy_static = "1.5"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
libsnow = { git = "https://github.com/snowfallorg/libsnow" }
